--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,171 @@
 <!DOCTYPE html>
-<html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
+<html class="page" lang="ru">
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
 
-  </body>
+<body class="page__body">
+  <header class="main-header">
+    <a class="logo">
+      <img class="logo-image" src="img/logo-cat.svg" alt="Логотип магазина «Кэт энерджи»">
+      <img class="logo-text" src="img/logo-text.svg" alt="Логотип-текст «Кэт энерджи»">
+    </a>
+    <nav class="main-nav">
+      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+      <div class="main-nav__wrapper">
+        <ul class="main-nav__list menu-list">
+          <li class="menu-list__item menu-list__item--active">
+            <a>
+              Главная
+            </a>
+          </li>
+          <li class="menu-list__item">
+            <a href="catalog.html">
+              Каталог продукции
+            </a>
+          </li>
+          <li class="menu-list__item">
+            <a href="form.html">
+              Подбор программы
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main class="main-container">
+    <h1 class="visually-hidden"> Магазин «Кэт энерджи»</h1>
+    <section class="promo">
+      <div class="promo__wrapper">
+        <header class="promo__header">
+          <h2 class="promo__title">Функциональное питание для котов</h2>
+          <p class="promo__slogan">Занялся собой? Займись котом!</p>
+          <a class="program__link" href="form.html">Подобрать программу</a>
+        </header>
+      </div>
+    </section>
+    <section class="series">
+      <div class="series__wrapper">
+        <h2 class="visually-hidden">Программы питания</h2>
+        <ul class="series__list">
+          <li class="series__item series__item--slim">
+            <h3 class="series__title">Похудение</h3>
+            <p class="series__description">Ваш кот весит больше собаки и почти утратил способность лазить по
+              деревьям?
+              Пора на диету! Cat Energy
+              Slim поможет вашему питомцу сбросить лишний вес.</p>
+            <a class="series__link" href="#">Каталог slim</a>
+          </li>
+          <li class="series__item series__item--pro">
+            <h3 class="series__title">Набор массы</h3>
+            <p class="series__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
+              Pro поможет вашему коту нарастить необходимые мышцы!</p>
+            <a class="series__link" href="#">Каталог pro</a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="features">
+      <div class="features__wraper">
+        <h2 class="features-title">Как это работает</h2>
+        <ul class="features__list">
+          <li class="features__item features__item-leaf">
+            <p class="features__description">Функциональное питание содержит только полезные
+              питательные вещества.</p>
+          </li>
+          <li class="features__item features__item-tub">
+            <p class="features__description">Выпускается в виде порошка, который нужно лишь залить
+              кипятком и готово.</p>
+          </li>
+          <li class="features__item features__item-eat">
+            <p class="features__description">Замените один-два приема обычной еды на наше
+              функциональное питание.</p>
+          </li>
+          <li class="features__item features__item-alarm">
+            <p class="features__description">Уже через месяц наслаждайтесь изменениями к лучшему
+              вашего питомца!</p>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <section class="example">
+      <div class="example__wrapper">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+          Slim. Отличный
+          результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в
+          день. </p>
+        <dl class="example__list">
+          <div class="example__item">
+            <dt class="example__number">
+              5 кг
+            </dt>
+            <dd class="example__text">
+              снижение веса
+            </dd>
+          </div>
+          <div class="example__item">
+            <dt class="example__number">
+              60 дней
+            </dt>
+            <dd class="example__text">
+              затрачено времени
+            </dd>
+          </div>
+        </dl>
+        <p class="example__price">Затраты на питание: </p>
+        <span class="example__price--value">15 000 руб.</span>
+      </div>
+      <div class="slider">
+        <div class="slider__bar">
+          <span class="slider__text">было</span>
+          <button class="slider__toggle" type="button"></button>
+          <span class="slider__text">стало</span>
+        </div>
+      </div>
+    </section>
+  </main>
+  <section class="contacts">
+    <h2 class="visually-hidden">Наш адресс</h2>
+    <div class="contacts__wrapper">
+      <p class="contacts__welcome">приглашаем к сотрудничеству дилеров!</p>
+      <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8
+        Санкт-Петербург</p>
+    </div>
+  </section>
+  <footer class="main-footer">
+    <div class="main-footer__wrapper">
+      <a class="logo" href="index.html">
+        <img class="logo-text" src="img/logo-text.svg" alt="Логотип-текст «Кэт энерджи»">
+      </a>
+      <div class="main-footer__social social">
+        <ul class="social__list">
+          <li class="social__item">
+            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Ютуб</span>
+            </a>
+          </li>
+          <li class="social__item">
+            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="main-footer__copyright copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+        <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип htmlacademy">
+      </div>
+    </div>
+  </footer>
+
+</body>
+
 </html>
