--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,7 @@
 <body class="page__body">
   <header class="main-header">
     <a class="logo">
-      <img class="logo-image" src="img/logo-cat.svg" alt="Логотип магазина «Кэт энерджи»">
-      <img class="logo-text" src="img/logo-text.svg" alt="Логотип-текст «Кэт энерджи»">
+      <img class="logo-image" src="img/logo-mobile.svg" alt="Логотип магазина «Кэт энерджи»">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
@@ -39,11 +38,9 @@
     <h1 class="visually-hidden"> Магазин «Кэт энерджи»</h1>
     <section class="promo">
       <div class="promo__wrapper">
-        <header class="promo__header">
-          <h2 class="promo__title">Функциональное питание для котов</h2>
-          <p class="promo__slogan">Занялся собой? Займись котом!</p>
-          <a class="program__link" href="form.html">Подобрать программу</a>
-        </header>
+        <h2 class="promo__title">Функциональное питание для котов</h2>
+        <p class="promo__slogan">Занялся собой? Займись котом!</p>
+        <a class="program__link button" href="form.html">Подобрать программу</a>
       </div>
     </section>
     <section class="series">
@@ -56,34 +53,34 @@
               деревьям?
               Пора на диету! Cat Energy
               Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="series__link" href="#">Каталог slim</a>
+            <a class="series__link button" href="#">Каталог slim</a>
           </li>
           <li class="series__item series__item--pro">
             <h3 class="series__title">Набор массы</h3>
             <p class="series__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
               Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="series__link" href="#">Каталог pro</a>
+            <a class="series__link button" href="#">Каталог pro</a>
           </li>
         </ul>
       </div>
     </section>
     <section class="features">
       <div class="features__wraper">
-        <h2 class="features-title">Как это работает</h2>
+        <h2 class="features__title">Как это работает</h2>
         <ul class="features__list">
-          <li class="features__item features__item-leaf">
+          <li class="features__item features__item--leaf">
             <p class="features__description">Функциональное питание содержит только полезные
               питательные вещества.</p>
           </li>
-          <li class="features__item features__item-tub">
+          <li class="features__item features__item--tub">
             <p class="features__description">Выпускается в виде порошка, который нужно лишь залить
               кипятком и готово.</p>
           </li>
-          <li class="features__item features__item-eat">
+          <li class="features__item features__item--eat">
             <p class="features__description">Замените один-два приема обычной еды на наше
               функциональное питание.</p>
           </li>
-          <li class="features__item features__item-alarm">
+          <li class="features__item features__item--alarm">
             <p class="features__description">Уже через месяц наслаждайтесь изменениями к лучшему
               вашего питомца!</p>
           </li>
@@ -116,21 +113,24 @@
           </div>
         </dl>
         <p class="example__price">Затраты на питание: </p>
-        <span class="example__price--value">15 000 руб.</span>
+        <span class="example__price-value">15 000 руб.</span>
       </div>
       <div class="slider">
         <div class="slider__bar">
-          <span class="slider__text">было</span>
+          <button class="slider__control" type="button">
+            <span class="slider__text">было</span>
+          </button>
           <button class="slider__toggle" type="button"></button>
-          <span class="slider__text">стало</span>
+          <button class="slider__control" type="button">
+            <span class="slider__text">стало</span>
+          </button>
         </div>
       </div>
     </section>
   </main>
   <section class="contacts">
-    <h2 class="visually-hidden">Наш адресс</h2>
     <div class="contacts__wrapper">
-      <p class="contacts__welcome">приглашаем к сотрудничеству дилеров!</p>
+      <h2 class="contacts__welcome">приглашаем к сотрудничеству дилеров!</h2>
       <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8
         Санкт-Петербург</p>
     </div>
@@ -160,8 +160,9 @@
         </ul>
       </div>
       <div class="main-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-        <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип htmlacademy">
+        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+          <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип htmlacademy">
+        </a>
       </div>
     </div>
   </footer>
