--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
 
 <body class="page__body">
   <header class="main-header">
-    <a class="logo">
+    <a class="logo" href="#">
       <img class="logo-image" src="img/logo-mobile.svg" alt="Логотип магазина «Кэт энерджи»">
     </a>
     <nav class="main-nav">
@@ -16,7 +16,7 @@
       <div class="main-nav__wrapper">
         <ul class="main-nav__list menu-list">
           <li class="menu-list__item menu-list__item--active">
-            <a>
+            <a href="index.html">
               Главная
             </a>
           </li>
@@ -36,11 +36,11 @@
   </header>
   <main class="main-container">
     <h1 class="visually-hidden"> Магазин «Кэт энерджи»</h1>
-    <section class="promo">
-      <div class="promo__wrapper">
-        <h2 class="promo__title">Функциональное питание для котов</h2>
-        <p class="promo__slogan">Занялся собой? Займись котом!</p>
-        <a class="program__link button" href="form.html">Подобрать программу</a>
+    <section class="content">
+      <div class="content__wrapper">
+        <h2 class="content__title">Функциональное питание для котов</h2>
+        <p class="content__subtitle">Занялся собой? Займись котом!</p>
+        <a class="content__link button" href="form.html">Подобрать программу</a>
       </div>
     </section>
     <section class="series">
@@ -53,13 +53,13 @@
               деревьям?
               Пора на диету! Cat Energy
               Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="series__link button" href="#">Каталог slim</a>
+            <a class="series__link" href="#">Каталог slim</a>
           </li>
           <li class="series__item series__item--pro">
             <h3 class="series__title">Набор массы</h3>
             <p class="series__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
               Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="series__link button" href="#">Каталог pro</a>
+            <a class="series__link" href="#">Каталог pro</a>
           </li>
         </ul>
       </div>
@@ -130,7 +130,7 @@
   </main>
   <section class="contacts">
     <div class="contacts__wrapper">
-      <h2 class="contacts__welcome">приглашаем к сотрудничеству дилеров!</h2>
+      <h3 class="contacts__welcome">Приглашаем к сотрудничеству дилеров!</h3>
       <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8
         Санкт-Петербург</p>
     </div>
