Вносит изменения в разметку внутренних страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,18 +40,20 @@
         <h1 class="content__title">Каталог продукции</h1>
       </div>
     </section>
-    <section class="product">
+    <section class="base-product">
       <h2 class="visually-hidden">Выбор вкуса</h2>
-      <ul class="product__list">
-        <li class="product__item">
-          <div class="product__wrapper">
-            <a class="product__image" href="#">
+      <ul class="base-product__list">
+        <li class="base-product__item">
+          <div class="base-product__wrapper">
+            <a class="base-product__image" href="#">
               <img src="img/chiken-500.jpg" alt="Cat energy pro 500 г">
             </a>
-            <div class="product__description">
-              <a class="product__title" href="#">Cat energy pro 500 г</a>
-              <div class="product__row">
-                <table class="product__details">
+            <div class="base-product__description">
+              <a class="base-product__link" href="#">
+                <h3 class="base-product__title">Cat energy pro 500 г</h3>
+              </a>
+              <div class="base-product__row">
+                <table class="base-product__details">
                   <tr>
                     <td>Масса</td>
                     <td>500 г</td>
@@ -66,19 +68,21 @@
                   </tr>
                 </table>
               </div>
-              <a class="product__link button" href="#">Заказать</a>
+              <a class="base-product__link button" href="#">Заказать</a>
             </div>
           </div>
         </li>
-        <li class="product__item">
-          <div class="product__wrapper">
-            <a class="product__image" href="#">
+        <li class="base-product__item">
+          <div class="base-product__wrapper">
+            <a class="base-product__image" href="#">
               <img src="img/chiken-1000.jpg" alt="Cat energy pro 1000 г">
             </a>
-            <div class="product__description">
-              <a class="product__title" href="#">Cat Energy PRO 1000 г</a>
-              <div class="product__row">
-                <table class="product__details">
+            <div class="base-product__description">
+              <a class="base-product__link" href="#">
+                <h3 class="base-product__title">Cat Energy PRO 1000 г</h3>
+              </a>
+              <div class="base-product__row">
+                <table class="base-product__details">
                   <tr>
                     <td>Масса</td>
                     <td>1000 г</td>
@@ -93,19 +97,21 @@
                   </tr>
                 </table>
               </div>
-              <a class="product__link button" href="#">Заказать</a>
+              <a class="base-product__link button" href="#">Заказать</a>
             </div>
           </div>
         </li>
-        <li class="product__item">
-          <div class="product__wrapper">
-            <a class="product__image" href="#">
+        <li class="base-product__item">
+          <div class="base-product__wrapper">
+            <a class="base-product__image" href="#">
               <img src="img/fish-500.jpg" alt="Cat energy pro 500 г">
             </a>
-            <div class="product__description">
-              <a class="product__title" href="#">Cat Energy PRO 500 г</a>
-              <div class="product__row">
-                <table class="product__details">
+            <div class="base-product__description">
+              <a class="base-product__link" href="#">
+                <h3 class="base-product__title">Cat Energy PRO 500 г</h3>
+              </a>
+              <div class="base-product__row">
+                <table class="base-product__details">
                   <tr>
                     <td>Масса</td>
                     <td>500 г</td>
@@ -120,19 +126,21 @@
                   </tr>
                 </table>
               </div>
-              <a class="product__link button" href="#">Заказать</a>
+              <a class="base-product__link button" href="#">Заказать</a>
             </div>
           </div>
         </li>
-        <li class="product__item">
-          <div class="product__wrapper">
-            <a class="product__image" href="#">
+        <li class="base-product__item">
+          <div class="base-product__wrapper">
+            <a class="base-product__image" href="#">
               <img src="img/fish-1000.jpg" alt="Cat energy pro 1000 г">
             </a>
-            <div class="product__description">
-              <a class="product__title" href="#">Cat Energy PRO 1000 г</a>
-              <div class="product__row">
-                <table class="product__details">
+            <div class="base-product__description">
+              <a class="base-product__link" href="#">
+                <h3 class="base-product__title">Cat Energy PRO 1000 г</h3>
+              </a>
+              <div class="base-product__row">
+                <table class="base-product__details">
                   <tr>
                     <td>Масса</td>
                     <td>1000 г</td>
@@ -147,19 +155,21 @@
                   </tr>
                 </table>
               </div>
-              <a class="product__link button" href="#">Заказать</a>
+              <a class="base-product__link button" href="#">Заказать</a>
             </div>
           </div>
         </li>
-        <li class="product__item">
-          <div class="product__wrapper">
-            <a class="product__image" href="#">
+        <li class="base-product__item">
+          <div class="base-product__wrapper">
+            <a class="base-product__image" href="#">
               <img src="img/buckwheat-500.jpg" alt="Cat energy pro 500 г">
             </a>
-            <div class="product__description">
-              <a class="product__title" href="#">Cat Energy PRO 500 г</a>
-              <div class="product__row">
-                <table class="product__details">
+            <div class="base-product__description">
+              <a class="base-product__link" href="#">
+                <h3 class="base-product__title">Cat Energy PRO 500 г</h3>
+              </a>
+              <div class="base-product__row">
+                <table class="base-product__details">
                   <tr>
                     <td>Масса</td>
                     <td>500 г</td>
@@ -174,19 +184,21 @@
                   </tr>
                 </table>
               </div>
-              <a class="product__link button" href="#">Заказать</a>
+              <a class="base-product__link button" href="#">Заказать</a>
             </div>
           </div>
         </li>
-        <li class="product__item">
-          <div class="product__wrapper">
-            <a class="product__image" href="#">
+        <li class="base-product__item">
+          <div class="base-product__wrapper">
+            <a class="base-product__image" href="#">
               <img src="img/buckwheat-1000.jpg" alt="Cat energy pro 1000 г">
             </a>
-            <div class="product__description">
-              <a class="product__title" href="#">Cat Energy PRO 1000 г</a>
-              <div class="product__row">
-                <table class="product__details">
+            <div class="base-product__description">
+              <a class="base-product__link" href="#">
+                <h3 class="base-product__title">Cat Energy PRO 1000 г</h3>
+              </a>
+              <div class="base-product__row">
+                <table class="base-product__details">
                   <tr>
                     <td>Масса</td>
                     <td>1000 г</td>
@@ -201,19 +213,21 @@
                   </tr>
                 </table>
               </div>
-              <a class="product__link button" href="#">Заказать</a>
+              <a class="base-product__link button" href="#">Заказать</a>
             </div>
           </div>
         </li>
-        <li class="product__item">
-          <div class="product__wrapper">
-            <a class="product__image" href="#">
+        <li class="base-product__item">
+          <div class="base-product__wrapper">
+            <a class="base-product__image" href="#">
               <img src="img/rice-500.jpg" alt="Cat energy pro 500 г">
             </a>
-            <div class="product__description">
-              <a class="product__title" href="#">Cat Energy PRO 500 г</a>
-              <div class="product__row">
-                <table class="product__details">
+            <div class="base-product__description">
+              <a class="base-product__link" href="#">
+                <h3 class="base-product__title">Cat Energy PRO 500 г</h3>
+              </a>
+              <div class="base-product__row">
+                <table class="base-product__details">
                   <tr>
                     <td>Масса</td>
                     <td>500 г</td>
@@ -228,72 +242,56 @@
                   </tr>
                 </table>
               </div>
-              <a class="product__link button" href="#">Заказать</a>
+              <a class="base-product__link button" href="#">Заказать</a>
             </div>
           </div>
         </li>
-        <li class="product__item product__item--more">
-          <div class="product__wrapper">
-            <a class="product__title" href="#">Показать еще 100500 товаров</a>
-            <span class="product__subtitle">На самом деле вкусов гораздо больше!</span>
-            <a class="product__link button" href="#">Заказать</a>
+        <li class="base-product__item base-product__item--more">
+          <div class="base-product__wrapper">
+            <h3 class="base-product__title">Показать еще 100500 товаров</h3>
+            <span class="base-product__subtitle">На самом деле вкусов гораздо больше!</span>
+            <a class="base-product__link button" href="#">Заказать</a>
           </div>
         </li>
       </ul>
     </section>
-    <section class="additional">
+    <section class="additional-product">
       <div class="content">
         <h2 class="content__title">Дополнительные товары</h2>
       </div>
-      <div class="additional__wrapper">
-        <ul class="additional__list">
-          <li class="additional__item">
-            <div class="additional__description">
-              <table class="additional__details">
-                <tr>
-                  <td>Сахарозаменитель</td>
-                  <td>1 упаковка (100 г)</td>
-                  <td>200 р.</td>
-                </tr>
-              </table>
-            </div>
-            <a class="additional__link button" href="#">Заказать</a>
+      <div class="additional-product__wrapper">
+        <ul class="additional-product__list">
+          <li class="additional-product__item">
+            <h3 class="additional-product__title">Сахарозаменитель</h3>
+            <p class="additional-product__description">
+              <span>1 упаковка (100 г)</span>
+              <span>200 р.</span>
+            </p>
+            <a class="additional-product__link button" href="#">Заказать</a>
           </li>
-          <li class="additional__item">
-            <div class="additional__description">
-              <table class="additional__details">
-                <tr>
-                  <td>Питьевая вода</td>
-                  <td>5 литров</td>
-                  <td>50 р.</td>
-                </tr>
-              </table>
-            </div>
-            <a class="additional__link button" href="#">Заказать</a>
+          <li class="additional-product__item">
+            <h3 class="additional-product__title">Питьевая вода</h3>
+            <p class="additional-product__description">
+              <span>5 литров</span>
+              <span>50 р.</span>
+            </p>
+            <a class="additional-product__link button" href="#">Заказать</a>
           </li>
-          <li class="additional__item">
-            <div class="additional__description">
-              <table class="additional__details">
-                <tr>
-                  <td>Молоко</td>
-                  <td>1 литр</td>
-                  <td>100 р.</td>
-                </tr>
-              </table>
-            </div>
-            <a class="additional__link button" href="#">Заказать</a>
+          <li class="additional-product__item">
+            <h3 class="additional-product__title">Молоко</h3>
+            <p class="additional-product__description">
+              <span>1 литр</span>
+              <span>100 р.</span>
+            </p>
+            <a class="additional-product__link button" href="#">Заказать</a>
           </li>
-          <li class="additional__item">
-            <div class="additional__description">
-              <table class="additional__details">
-                <tr>
-                  <td>Витамины</td>
-                  <td>1 упаковка (30 г)</td>
-                  <td>300 р.</td>
-                </tr>
-              </table>
-            </div>
-            <a class="additional__link button" href="#">Заказать</a>
+          <li class="additional-product__item">
+            <h3 class="additional-product__title">Витамины</h3>
+            <p class="additional-product__description">
+              <span>1 упаковка (30 г)</span>
+              <span>300 р.</span>
+            </p>
+            <a class="additional-product__link button" href="#">Заказать</a>
           </li>
         </ul>
       </div>
