--- a/source/index.html
+++ b/source/index.html
@@ -4,169 +4,173 @@
 <head>
   <meta charset="utf-8">
   <title>HTML Academy: Кэт энерджи</title>
+  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body class="page__body">
-  <header class="main-header">
-    <a class="logo" href="#">
-      <img class="logo-image" src="img/logo-mobile.svg" alt="Логотип магазина «Кэт энерджи»">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list menu-list">
-          <li class="menu-list__item menu-list__item--active">
-            <a href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="menu-list__item">
-            <a href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="menu-list__item">
-            <a href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <main class="main-container">
-    <h1 class="visually-hidden"> Магазин «Кэт энерджи»</h1>
-    <section class="content">
-      <div class="content__wrapper">
-        <h2 class="content__title">Функциональное питание для котов</h2>
-        <p class="content__subtitle">Занялся собой? Займись котом!</p>
-        <a class="content__link button" href="form.html">Подобрать программу</a>
-      </div>
-    </section>
-    <section class="series">
-      <div class="series__wrapper">
-        <h2 class="visually-hidden">Программы питания</h2>
-        <ul class="series__list">
-          <li class="series__item series__item--slim">
-            <h3 class="series__title">Похудение</h3>
-            <p class="series__description">Ваш кот весит больше собаки и почти утратил способность лазить по
-              деревьям?
-              Пора на диету! Cat Energy
-              Slim поможет вашему питомцу сбросить лишний вес.</p>
-            <a class="series__link" href="#">Каталог slim</a>
-          </li>
-          <li class="series__item series__item--pro">
-            <h3 class="series__title">Набор массы</h3>
-            <p class="series__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
-              Pro поможет вашему коту нарастить необходимые мышцы!</p>
-            <a class="series__link" href="#">Каталог pro</a>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="features">
-      <div class="features__wraper">
-        <h2 class="features__title">Как это работает</h2>
-        <ul class="features__list">
-          <li class="features__item features__item--leaf">
-            <p class="features__description">Функциональное питание содержит только полезные
-              питательные вещества.</p>
-          </li>
-          <li class="features__item features__item--tub">
-            <p class="features__description">Выпускается в виде порошка, который нужно лишь залить
-              кипятком и готово.</p>
-          </li>
-          <li class="features__item features__item--eat">
-            <p class="features__description">Замените один-два приема обычной еды на наше
-              функциональное питание.</p>
-          </li>
-          <li class="features__item features__item--alarm">
-            <p class="features__description">Уже через месяц наслаждайтесь изменениями к лучшему
-              вашего питомца!</p>
-          </li>
-        </ul>
-      </div>
-    </section>
-    <section class="example">
-      <div class="example__wrapper">
-        <h2 class="example__title">Живой пример</h2>
-        <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
-          Slim. Отличный
-          результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в
-          день. </p>
-        <dl class="example__list">
-          <div class="example__item">
-            <dt class="example__number">
-              5 кг
-            </dt>
-            <dd class="example__text">
-              снижение веса
-            </dd>
+  <div class="wrapper-mobile">
+    <header class="main-header">
+      <a class="header-logo" href="#">
+        <img class="logo-image" src="img/logo-mobile.svg" width="182" height="20" alt="Логотип магазина «Кэт энерджи»">
+      </a>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list menu-list">
+            <li class="menu-list__item menu-list__item--active">
+              <a class="menu-list__link" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="menu-list__item">
+              <a class="menu-list__link" href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="menu-list__item">
+              <a class="menu-list__link" href="form.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="main-container">
+      <h1 class="visually-hidden"> Магазин «Кэт энерджи»</h1>
+      <section class="promo">
+        <div class="promo__wrapper">
+          <h2 class="promo__title">Функциональное питание для котов</h2>
+          <p class="promo__slogan">Занялся собой? Займись котом!</p>
+          <img class="promo__image" src="./img/index-can-mobile.png" width="280" height="270"
+            alt="Кошачий корм Cat Energy PRO">
+          <a class="promo__link button" href="form.html">Подобрать программу</a>
+        </div>
+      </section>
+      <section class="series">
+        <div class="series__wrapper">
+          <h2 class="visually-hidden">Программы питания</h2>
+          <ul class="series__list">
+            <li class="series__item series__item--slim">
+              <h3 class="series__title">Похудение</h3>
+              <p class="series__description">Ваш кот весит больше собаки и почти утратил способность лазить по
+                деревьям?
+                Пора на диету! Cat Energy
+                Slim поможет вашему питомцу сбросить лишний вес.</p>
+              <a class="series__link" href="#">Каталог slim</a>
+            </li>
+            <li class="series__item series__item--pro">
+              <h3 class="series__title">Набор массы</h3>
+              <p class="series__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy
+                Pro поможет вашему коту нарастить необходимые мышцы!</p>
+              <a class="series__link" href="#">Каталог pro</a>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="features">
+        <div class="features__wraper">
+          <h2 class="features__title">Как это работает</h2>
+          <ul class="features__list">
+            <li class="features__item features__item--leaf">
+              <p class="features__description">Функциональное питание содержит только полезные
+                питательные вещества.</p>
+            </li>
+            <li class="features__item features__item--tub">
+              <p class="features__description">Выпускается в виде порошка, который нужно лишь залить
+                кипятком и готово.</p>
+            </li>
+            <li class="features__item features__item--eat">
+              <p class="features__description">Замените один-два приема обычной еды на наше
+                функциональное питание.</p>
+            </li>
+            <li class="features__item features__item--alarm">
+              <p class="features__description">Уже через месяц наслаждайтесь изменениями к лучшему
+                вашего питомца!</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="example">
+        <div class="example__wrapper">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
+            Slim. Отличный
+            результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в
+            день. </p>
+          <dl class="example__list">
+            <div class="example__item">
+              <dt class="example__number">
+                5 кг
+              </dt>
+              <dd class="example__text">
+                снижение веса
+              </dd>
+            </div>
+            <div class="example__item">
+              <dt class="example__number">
+                60 дней
+              </dt>
+              <dd class="example__text">
+                затрачено времени
+              </dd>
+            </div>
+          </dl>
+          <p class="example__price">Затраты на питание: </p>
+          <span class="example__price-value">15 000 руб.</span>
+          <div class="slider">
+            <div class="slider__bar">
+              <button class="slider__control" type="button">
+                <span class="slider__text">было</span>
+              </button>
+              <button class="slider__toggle" type="button"></button>
+              <button class="slider__control" type="button">
+                <span class="slider__text">стало</span>
+              </button>
+            </div>
           </div>
-          <div class="example__item">
-            <dt class="example__number">
-              60 дней
-            </dt>
-            <dd class="example__text">
-              затрачено времени
-            </dd>
-          </div>
-        </dl>
-        <p class="example__price">Затраты на питание: </p>
-        <span class="example__price-value">15 000 руб.</span>
+        </div>
+      </section>
+    </main>
+    <section class="contacts">
+      <div class="contacts__wrapper">
+        <h3 class="contacts__welcome">Приглашаем к сотрудничеству дилеров!</h3>
+        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8
+          Санкт-Петербург</p>
       </div>
-      <div class="slider">
-        <div class="slider__bar">
-          <button class="slider__control" type="button">
-            <span class="slider__text">было</span>
-          </button>
-          <button class="slider__toggle" type="button"></button>
-          <button class="slider__control" type="button">
-            <span class="slider__text">стало</span>
-          </button>
+    </section>
+    <footer class="main-footer">
+      <div class="main-footer__wrapper">
+        <a class="footer-logo" href="index.html">
+          <img class="logo-text" src="img/footer-logo.svg" alt="Логотип «Кэт энерджи»">
+        </a>
+        <div class="main-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Телеграм</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="main-footer__copyright copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+            <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип htmlacademy">
+          </a>
         </div>
       </div>
-    </section>
-  </main>
-  <section class="contacts">
-    <div class="contacts__wrapper">
-      <h3 class="contacts__welcome">Приглашаем к сотрудничеству дилеров!</h3>
-      <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8
-        Санкт-Петербург</p>
-    </div>
-  </section>
-  <footer class="main-footer">
-    <div class="main-footer__wrapper">
-      <a class="logo" href="index.html">
-        <img class="logo-text" src="img/logo-text.svg" alt="Логотип-текст «Кэт энерджи»">
-      </a>
-      <div class="main-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Вконтакте</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Ютуб</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Телеграм</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <div class="main-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-          <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип htmlacademy">
-        </a>
-      </div>
-    </div>
-  </footer>
-
+    </footer>
+  </div>
 </body>
 
 </html>
