Доработки к базовой стилизации

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,11 +37,7 @@
       </nav>
     </header>
     <main class="main-container">
-      <section class="content-catalog">
-        <div class="content__wrapper">
-          <h1 class="content__title">Каталог продукции</h1>
-        </div>
-      </section>
+      <h1 class="main-container__title">Каталог продукции</h1>
       <section class="base-product">
         <h2 class="visually-hidden">Выбор вкуса</h2>
         <ul class="base-product__list">
@@ -70,7 +66,7 @@
                     </tr>
                   </table>
                 </div>
-                <a class="base-product__link button" href="#">Заказать</a>
+                <a class="base-product__order-link button" href="#">Заказать</a>
               </div>
             </div>
           </li>
@@ -99,7 +95,7 @@
                     </tr>
                   </table>
                 </div>
-                <a class="base-product__link button" href="#">Заказать</a>
+                <a class="base-product__order-link button" href="#">Заказать</a>
               </div>
             </div>
           </li>
@@ -128,7 +124,7 @@
                     </tr>
                   </table>
                 </div>
-                <a class="base-product__link button" href="#">Заказать</a>
+                <a class="base-product__order-link button" href="#">Заказать</a>
               </div>
             </div>
           </li>
@@ -157,7 +153,7 @@
                     </tr>
                   </table>
                 </div>
-                <a class="base-product__link button" href="#">Заказать</a>
+                <a class="base-product__order-link button" href="#">Заказать</a>
               </div>
             </div>
           </li>
@@ -186,7 +182,7 @@
                     </tr>
                   </table>
                 </div>
-                <a class="base-product__link button" href="#">Заказать</a>
+                <a class="base-product__order-link button" href="#">Заказать</a>
               </div>
             </div>
           </li>
@@ -215,7 +211,7 @@
                     </tr>
                   </table>
                 </div>
-                <a class="base-product__link button" href="#">Заказать</a>
+                <a class="base-product__order-link button" href="#">Заказать</a>
               </div>
             </div>
           </li>
@@ -244,7 +240,7 @@
                     </tr>
                   </table>
                 </div>
-                <a class="base-product__link button" href="#">Заказать</a>
+                <a class="base-product__order-link button" href="#">Заказать</a>
               </div>
             </div>
           </li>
@@ -252,14 +248,14 @@
             <div class="base-product__wrapper">
               <h3 class="base-product__title">Показать еще 100500 товаров</h3>
               <span class="base-product__subtitle">На самом деле вкусов гораздо больше!</span>
-              <a class="base-product__link button" href="#">Заказать</a>
+              <a class="base-product__order-link button" href="#">Заказать</a>
             </div>
           </li>
         </ul>
       </section>
       <section class="additional-product">
-        <div class="content-additional">
-          <h2 class="content-additional__title">Дополнительные товары</h2>
+        <div class="additional-product-content">
+          <h2 class="additional-product__heading">Дополнительные товары</h2>
         </div>
         <div class="additional-product__wrapper">
           <ul class="additional-product__list">
@@ -293,12 +289,12 @@
                 <span class="additional-product__value">1 упаковка (30 г)</span>
                 <span class="additional-product__value">300 р.</span>
               </p>
-              <a class="additional-product__link button" href="#">Заказать</a>
+              <a class="additional-product__link button button--gray" href="#">Заказать</a>
             </li>
           </ul>
         </div>
         <div class="gift">
-          <span class="gift__slogan">Закажите все и получите чехол для
+          <span class="gift__slogan">Закажите все <br> и получите чехол для <br>
             кота в подарок!</span>
         </div>
       </section>
@@ -306,14 +302,14 @@
     <section class="contacts">
       <div class="contacts__wrapper">
         <h3 class="contacts__welcome">Приглашаем к сотрудничеству дилеров!</h3>
-        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8
+        <p class="contacts__adress">ул. Большая <br> Конюшенная, д. 19/8 <br>
           Санкт-Петербург</p>
       </div>
     </section>
     <footer class="main-footer">
       <div class="main-footer__wrapper">
-        <a class="logo" href="index.html">
-          <img class="logo-text" src="img/footer-logo.svg" alt="Логотип-текст «Кэт энерджи»">
+        <a class="footer-logo" href="index.html">
+          <img class="logo-text" src="img/footer-logo.svg" alt="Логотип «Кэт энерджи»">
         </a>
         <div class="main-footer__social social">
           <ul class="social__list">
