--- a/source/form.html
+++ b/source/form.html
@@ -9,190 +9,184 @@
 
 <body class="page__body">
   <div class="wrapper-mobile">
-  <header class="main-header">
-    <a class="logo" href="#">
-      <img class="logo-image" src="img/logo-mobile.svg" width="182" height="20" alt="Логотип магазина «Кэт энерджи»">
-    </a>
-    <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
-      <div class="main-nav__wrapper">
-        <ul class="main-nav__list menu-list">
-          <li class="menu-list__item menu-list__item--active">
-            <a class="menu-list__link" href="index.html">
-              Главная
-            </a>
-          </li>
-          <li class="menu-list__item">
-            <a class="menu-list__link" href="catalog.html">
-              Каталог продукции
-            </a>
-          </li>
-          <li class="menu-list__item">
-            <a class="menu-list__link" href="form.html">
-              Подбор программы
-            </a>
-          </li>
-        </ul>
-      </div>
-    </nav>
-  </header>
-  <main class="main-container">
-    <section class="program-selection">
-      <div class="program-selection-wrapper">
-        <h1 class="program-selection__title">Подбор программы</h1>
-        <p class="program-selection__subtitle">Заполните анкету, и мы подберем
-          программу питания для вашего кота</p>
-      </div>
-    </section>
-    <section class="pofile">
-      <form class="pofile__form form-field" action="https://echo.htmlacademy.ru/" method="post">
-        <div class="form-field__wrapper">
-          <fieldset class="form-field__group-info-cat">
-            <legend class="visually-hidden">Данные кота</legend>
-            <div class="form-field__row">
-              <label class="field-text">
-                <span class="field-text__label">Имя:<sup>*</sup>:</span>
-                <input class="field-text__control" type="text" id="name" name="catname" placeholder="Барсик" required>
-              </label>
-            </div>
-            <div class="form-field__row">
-              <label class="field-text">
-                <span class="field-text__label">Вес (кг):<sup>*</sup>:</span>
-                <input class="field-text__control" type="text" id="weight" name="weight" placeholder="7" required>
-              </label>
-            </div>
-            <div class="form-field__row">
-              <label class="field-text">
-                <span class="field-text__label">Возраст (лет):</span>
-                <input class="field-text__control" type="text" id="age" name="age" placeholder="7">
-              </label>
-            </div>
-          </fieldset>
-          <fieldset class="form-field__group-program">
-            <legend class="visually-hidden">Выбор программы</legend>
-            <div class="form-field__row">
-              <input class="form-field__radio" type="radio" id="slim" name="program-select" value="slim" checked>
-              <label class="form-field__radio-label" for="slim">Похудение</label>
-            </div>
-            <div class="form-field__row">
-              <input class="form-field__radio" type="radio" id="power" name="program-select" value="power">
-              <label class="form-field__radio-label" for="power">Набор массы</label>
-            </div>
-            <div class="form-field__row">
-              <input class="form-field__radio" type="radio" id="support" name="program-select" value="support">
-              <label class="form-field__radio-label" for="support">Не знаю (Нужен ваш совет)</label>
-            </div>
-          </fieldset>
-        </div>
-        <div>
-          <fieldset class="form-field__group-user">
-            <div class="content-user-contact">
-              <h2 class="content-user-contact__title">Контактные данные (владельца кота)</h2>
-            </div>
-            <div class="form-field__row">
-              <label class="field-text" for="email">E-mail:
-                <input class="field-text__control" type="email" id="email" placeholder="kuklachev@gmail.com" required>
-                <svg width="20" height="15" viewBox="0 0 20 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path stroke="#222" stroke-width="1.3"
-                    d="M1.6 5.8v8m17-8v8M1 13.2h18M1 1.2h18M18.4 3 10 9.5 1.7 3V1.5h16.7V3Z" />
-                </svg>
-              </label>
-            </div>
-            <div class="form-field__row">
-              <label class="field-text" for="phone">Телефон:*
-                <input class="field-text__control" type="tel" id="phone" placeholder="8 (960) 900-60-90" required>
-                <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <g clip-path="url(#a)" fill="#000">
-                    <path
-                      d="M17.9 9.8H9.4V11h8.5l-2.1 2 .9 1 3.1-3.1a.8.8 0 0 0 0-1l-3.1-3-.9.8 2.1 2Zm-9.8 10v-6.2a.7.7 0 0 0-.6-.6H3.1a1.2 1.2 0 0 0 1.2 1.2h2.5v5H3.1a1.8 1.8 0 0 1-1.9-1.7v-14a1.8 1.8 0 0 1 1.7-1.9h3.9v5H4.4a1.2 1.2 0 0 0-1.2 1.2h4.4a.6.6 0 0 0 .6-.6V1a.9.9 0 0 0-.7-.6H3.1a3 3 0 0 0-3.1 3v13.9a3 3 0 0 0 2.9 3h4.6a.5.5 0 0 0 .6-.4Z" />
-                  </g>
-                  <defs>
-                    <clipPath id="a">
-                      <path fill="#fff" transform="translate(0 .3)" d="M0 0h20v20.1H0z" />
-                    </clipPath>
-                  </defs>
-                </svg>
-              </label>
-            </div>
-          </fieldset>
-        </div>
-        <fieldset class="form-field__group-comment">
-          <div class="content-comment">
-            <h2 class="content-comment__title">Комментарий</h2>
-          </div>
-          <label class="visually-hidden" for="comment">Характер кота</label>
-          <textarea class="form-field__textarea" name="comment" id="comment" cols="50" rows="10"
-            placeholder="Расскажите обо всех повадках кота"></textarea>
-        </fieldset>
-        <fieldset class="form-field__group-additionally">
-          <div class="content-additional">
-            <h2 class="content-additional__title">Дополнительно</h2>
-          </div>
-          <div class="form-field__row">
-            <input class="form-field__checkbox" type="checkbox" id="sweetener" name="sweetener" checked>
-            <label class="form-field__checkbox-label" for="sweetener">Сахарозаменитель</label>
-          </div>
-          <div class="form-field__row">
-            <input class="form-field__checkbox" type="checkbox" id="milk" name="milk">
-            <label class="form-field__checkbox-label" for="milk">Молоко</label>
-          </div>
-          <div class="form-field__row">
-            <input class="form-field__checkbox" type="checkbox" id="water" name="water">
-            <label class="form-field__checkbox-label" for="water">Питьевая вода</label>
-          </div>
-          <div class="form-field__row">
-            <input class="form-field__checkbox" type="checkbox" id="vitamin" name="vitamin">
-            <label class="form-field__checkbox-label" for="vitamin">Витамины</label>
-          </div>
-        </fieldset>
-        <div class="form-field__row">
-          <button class="form-field__button button" type="submit">Отправить заявку</button>
-          <p class="form-field__required">
-            <small>* — Обязательные поля</small>
-          </p>
-        </div>
-      </form>
-    </section>
-  </main>
-  <section class="contacts">
-    <div class="contacts__wrapper">
-      <h3 class="contacts__welcome">Приглашаем к сотрудничеству дилеров!</h3>
-      <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8
-        Санкт-Петербург</p>
-    </div>
-  </section>
-  <footer class="main-footer">
-    <div class="main-footer__wrapper">
-      <a class="logo" href="index.html">
-        <img class="logo-text" src="img/footer-logo.svg" alt="Логотип-текст «Кэт энерджи»">
+    <header class="main-header">
+      <a class="logo" href="#">
+        <img class="logo-image" src="img/logo-mobile.svg" width="182" height="20" alt="Логотип магазина «Кэт энерджи»">
       </a>
-      <div class="main-footer__social social">
-        <ul class="social__list">
-          <li class="social__item">
-            <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Вконтакте</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Ютуб</span>
-            </a>
-          </li>
-          <li class="social__item">
-            <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Телеграм</span>
-            </a>
-          </li>
-        </ul>
+      <nav class="main-nav">
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+        <div class="main-nav__wrapper">
+          <ul class="main-nav__list menu-list">
+            <li class="menu-list__item menu-list__item--active">
+              <a class="menu-list__link" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="menu-list__item">
+              <a class="menu-list__link" href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="menu-list__item">
+              <a class="menu-list__link" href="form.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main class="main-container">
+      <section class="program-selection">
+        <div class="program-selection-wrapper">
+          <h1 class="program-selection__title">Подбор программы</h1>
+          <p class="program-selection__subtitle">Заполните анкету, и мы подберем
+            программу питания для вашего кота</p>
+        </div>
+      </section>
+      <section class="pofile">
+        <form class="pofile__form form-field" action="https://echo.htmlacademy.ru/" method="post">
+          <div class="form-field__wrapper">
+            <fieldset class="form-field__group form-field__info-cat">
+              <legend class="visually-hidden">Данные кота</legend>
+              <div class="form-field__row">
+                <label class="field-text">
+                  <span class="field-text__label">Имя:<sup>*</sup>:</span>
+                  <input class="field-text__control" type="text" id="name" name="catname" placeholder="Барсик" required>
+                </label>
+              </div>
+              <div class="form-field__row">
+                <label class="field-text">
+                  <span class="field-text__label">Вес (кг):<sup>*</sup>:</span>
+                  <input class="field-text__control" type="text" id="weight" name="weight" placeholder="7" required>
+                </label>
+              </div>
+              <div class="form-field__row">
+                <label class="field-text">
+                  <span class="field-text__label">Возраст (лет):</span>
+                  <input class="field-text__control" type="text" id="age" name="age" placeholder="7">
+                </label>
+              </div>
+            </fieldset>
+            <fieldset class="form-field__group form-field__program">
+              <legend class="visually-hidden">Выбор программы</legend>
+              <div class="form-field__row">
+                <input class="form-field__radio" type="radio" id="slim" name="program-select" value="slim" checked>
+                <label class="form-field__radio-label" for="slim">Похудение</label>
+              </div>
+              <div class="form-field__row">
+                <input class="form-field__radio" type="radio" id="power" name="program-select" value="power">
+                <label class="form-field__radio-label" for="power">Набор массы</label>
+              </div>
+              <div class="form-field__row">
+                <input class="form-field__radio" type="radio" id="support" name="program-select" value="support">
+                <label class="form-field__radio-label" for="support">Не знаю (Нужен ваш совет)</label>
+              </div>
+            </fieldset>
+          </div>
+          <div>
+            <fieldset class="form-field__group form-field__contact-details">
+              <h2 class="form-field__legend">Контактные данные (владельца кота)</h2>
+              <div class="form-field__row">
+                <label class="field-text__label" for="email">E-mail:
+                  <input class="field-text__control" type="email" id="email" placeholder="kuklachev@gmail.com" required>
+                  <svg width="20" height="15" viewBox="0 0 20 15" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path stroke="#222" stroke-width="1.3"
+                      d="M1.6 5.8v8m17-8v8M1 13.2h18M1 1.2h18M18.4 3 10 9.5 1.7 3V1.5h16.7V3Z" />
+                  </svg>
+                </label>
+              </div>
+              <div class="form-field__row">
+                <label class="field-text__label" for="phone">Телефон:*
+                  <input class="field-text__control" type="tel" id="phone" placeholder="8 (960) 900-60-90" required>
+                  <svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <g clip-path="url(#a)" fill="#000">
+                      <path
+                        d="M17.9 9.8H9.4V11h8.5l-2.1 2 .9 1 3.1-3.1a.8.8 0 0 0 0-1l-3.1-3-.9.8 2.1 2Zm-9.8 10v-6.2a.7.7 0 0 0-.6-.6H3.1a1.2 1.2 0 0 0 1.2 1.2h2.5v5H3.1a1.8 1.8 0 0 1-1.9-1.7v-14a1.8 1.8 0 0 1 1.7-1.9h3.9v5H4.4a1.2 1.2 0 0 0-1.2 1.2h4.4a.6.6 0 0 0 .6-.6V1a.9.9 0 0 0-.7-.6H3.1a3 3 0 0 0-3.1 3v13.9a3 3 0 0 0 2.9 3h4.6a.5.5 0 0 0 .6-.4Z" />
+                    </g>
+                    <defs>
+                      <clipPath id="a">
+                        <path fill="#fff" transform="translate(0 .3)" d="M0 0h20v20.1H0z" />
+                      </clipPath>
+                    </defs>
+                  </svg>
+                </label>
+              </div>
+            </fieldset>
+          </div>
+          <fieldset class="form-field__group form-field__comment">
+              <legend class="form-field__legend">Комментарий</legend>
+            <label class="visually-hidden" for="comment">Характер кота</label>
+            <textarea class="form-field__textarea" name="comment" id="comment" cols="50" rows="10"
+              placeholder="Расскажите обо всех повадках кота"></textarea>
+          </fieldset>
+          <fieldset class="form-field__group form-field__additionally">
+              <h2 class="form-field__legend">Дополнительно</h2>
+            <div class="form-field__row">
+              <input class="form-field__checkbox" type="checkbox" id="sweetener" name="sweetener" checked>
+              <label class="form-field__checkbox-label" for="sweetener">Сахарозаменитель</label>
+            </div>
+            <div class="form-field__row">
+              <input class="form-field__checkbox" type="checkbox" id="milk" name="milk">
+              <label class="form-field__checkbox-label" for="milk">Молоко</label>
+            </div>
+            <div class="form-field__row">
+              <input class="form-field__checkbox" type="checkbox" id="water" name="water">
+              <label class="form-field__checkbox-label" for="water">Питьевая вода</label>
+            </div>
+            <div class="form-field__row">
+              <input class="form-field__checkbox" type="checkbox" id="vitamin" name="vitamin">
+              <label class="form-field__checkbox-label" for="vitamin">Витамины</label>
+            </div>
+          </fieldset>
+          <div class="form-field__row">
+            <button class="form-field__button button" type="submit">Отправить заявку</button>
+            <p class="form-field__required">
+              <small>* — Обязательные поля</small>
+            </p>
+          </div>
+        </form>
+      </section>
+    </main>
+    <section class="contacts">
+      <div class="contacts__wrapper">
+        <h3 class="contacts__welcome">Приглашаем к сотрудничеству дилеров!</h3>
+        <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8
+          Санкт-Петербург</p>
       </div>
-      <div class="main-footer__copyright copyright">
-        <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
-          <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип htmlacademy">
+    </section>
+    <footer class="main-footer">
+      <div class="main-footer__wrapper">
+        <a class="footer-logo" href="index.html">
+          <img class="logo-text" src="img/footer-logo.svg" alt="Логотип «Кэт энерджи»">
         </a>
+        <div class="main-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--youtube" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--telegram" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Телеграм</span>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div class="main-footer__copyright copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy
+            <img class="copyright__logo" src="img/htmlacademy.svg" alt="Логотип htmlacademy">
+          </a>
+        </div>
       </div>
-    </div>
-  </footer>
-</div>
+    </footer>
+  </div>
 
 </body>
 
