Добавляет адаптивную сетку крупных блоков главной страницы

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -10,7 +10,7 @@
 
 <body class="page__body">
   <header class="main-header">
-    <div class="main-header__wrapper">
+    <div class="main-header__wrapper container">
       <a class="main-header__logo" href="#">
         <img class="main-header__logo-image" src="img/logo-mobile.svg" width="191" height="65"
           alt="Логотип магазина «Кэт энерджи»">
@@ -40,8 +40,10 @@
     </div>
   </header>
   <main class="main-container">
-    <h1 class="main-container__title">Каталог продукции</h1>
-    <section class="base-product">
+    <div class="main-container__wrapper-title container">
+      <h1 class="main-container__title">Каталог продукции</h1>
+    </div>
+    <section class="base-product container">
       <h2 class="visually-hidden">Выбор вкуса</h2>
       <ul class="base-product__list">
         <li class="base-product__item">
@@ -257,10 +259,10 @@
       </ul>
     </section>
     <section class="additional-product">
-      <div class="additional-product__wrapper-heading">
+      <div class="additional-product__wrapper-heading container">
         <h2 class="additional-product__heading">Дополнительные товары</h2>
       </div>
-      <div class="additional-product__wrapper">
+      <div class="additional-product__wrapper container">
         <ul class="additional-product__list">
           <li class="additional-product__item">
             <h3 class="additional-product__title">Сахарозаменитель</h3>
@@ -296,14 +298,14 @@
           </li>
         </ul>
       </div>
-      <div class="gift">
+      <div class="gift container">
         <span class="gift__slogan">Закажите все <br> и получите чехол для <br>
           кота в подарок!</span>
       </div>
     </section>
   </main>
   <section class="contacts">
-    <div class="contacts__wrapper">
+    <div class="contacts__wrapper container">
       <h3 class="contacts__welcome">Приглашаем к сотрудничеству дилеров!</h3>
       <p class="contacts__adress">ул. Большая <br> Конюшенная, д. 19/8 <br>
         Санкт-Петербург</p>
