--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 
 <body class="page__body">
   <header class="main-header">
-    <div class="main-header__wrapper">
+    <div class="main-header__wrapper container">
       <a class="main-header__logo" href="#">
         <img class="main-header__logo-image" src="img/logo-mobile.svg" width="191" height="65"
           alt="Логотип магазина «Кэт энерджи»">
@@ -42,7 +42,7 @@
   <main class="main-container">
     <h1 class="visually-hidden"> Магазин «Кэт энерджи»</h1>
     <section class="promo">
-      <div class="promo__wrapper">
+      <div class="promo__wrapper container">
         <h2 class="promo__title">Функциональное питание для котов</h2>
         <p class="promo__slogan">Занялся собой? Займись котом!</p>
         <img class="promo__image" src="./img/index-can-mobile.png" width="280" height="270"
@@ -51,7 +51,7 @@
       </div>
     </section>
     <section class="series">
-      <div class="series__wrapper">
+      <div class="series__wrapper container">
         <h2 class="visually-hidden">Программы питания</h2>
         <ul class="series__list">
           <li class="series__item series__item--slim">
@@ -72,7 +72,7 @@
       </div>
     </section>
     <section class="features">
-      <div class="features__wraper">
+      <div class="features__wraper container">
         <h2 class="features__title">Как это работает</h2>
         <ul class="features__list">
           <li class="features__item features__item--leaf">
@@ -95,7 +95,7 @@
       </div>
     </section>
     <section class="example">
-      <div class="example__wrapper">
+      <div class="example__wrapper container">
         <h2 class="example__title">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
           Slim. Отличный
@@ -136,7 +136,7 @@
     </section>
   </main>
   <section class="contacts">
-    <div class="contacts__wrapper">
+    <div class="contacts__wrapper container">
       <h3 class="contacts__welcome">Приглашаем к сотрудничеству дилеров!</h3>
       <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8
         Санкт-Петербург</p>
@@ -144,7 +144,7 @@
     <div class="contacts__map"></div>
   </section>
   <footer class="main-footer">
-    <div class="main-footer__wrapper">
+    <div class="main-footer__wrapper container">
       <a class="footer-logo" href="index.html">
         <img class="logo-text" src="img/footer-logo.svg" alt="Логотип «Кэт энерджи»">
       </a>
