Добавляет адаптивные сетки крупных блоков внутренних страниц

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -312,7 +312,7 @@
     </div>
   </section>
   <footer class="main-footer">
-    <div class="main-footer__wrapper">
+    <div class="main-footer__wrapper container">
       <a class="footer-logo" href="index.html">
         <img class="logo-text" src="img/footer-logo.svg" alt="Логотип «Кэт энерджи»">
       </a>
