--- a/source/form.html
+++ b/source/form.html
@@ -156,7 +156,7 @@
     </section>
   </main>
   <section class="contacts">
-    <div class="contacts__wrapper">
+    <div class="contacts__wrapper container">
       <h3 class="contacts__welcome">Приглашаем к сотрудничеству дилеров!</h3>
       <p class="contacts__adress">ул. Большая Конюшенная, д. 19/8
         Санкт-Петербург</p>
